--- a/src/components/Formacao.module.css
+++ b/src/components/Formacao.module.css
@@ -14,7 +14,8 @@
 }
 
 .paragrafo {
-    font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 10px;
+  color: #555;
 }
