--- a/src/components/Sobre.module.css
+++ b/src/components/Sobre.module.css
@@ -12,6 +12,7 @@
   color: #222;
 }
 
-.paragrafo{
+.paragrafo {
   margin-bottom: 10px;
+  color: #555;
 }
